[package]
name = "http-probe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "http_probe_lib"
path = "src/lib.rs"

[[bin]]
name = "http_probe_bin"
path = "src/bin.rs"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
futures = "0.3.30"
reqwest = "0.11.27"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
