[package]
name = "subdomain-enum"
author = "ronofays"
version = "0.1.0"
edition = "2021"

[lib]
name = "subdomain_lib"
path = "src/lib.rs"

[[bin]]
name = "subdomain_bin"
path = "src/bin.rs"

[dependencies]
rayon = "1.9.0"
reqwest = { version = "0.11.26", features = ["blocking"] }
scraper = "0.19.0"
thiserror = "1.0.58"
